--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -5,6 +5,8 @@ navbar:
   left:
   - text: Home
     href: index.html
+  - text: assignment
+    href: assignment.html
   - text: About
     href: about.html
   - text: License
